# takeoffs

./: .env.example  .gitignore  2026-02-09-make-pricing-transparent-show-where-every-dolla.txt  README.md  docker-compose.yml  prd.json  progress.txt
backend/: Dockerfile  README.md  pyproject 2.toml  pyproject.toml
backend/cantena/: __init__ 2.py  __init__.py  engine.py  exceptions.py  factory.py  formatting.py
backend/cantena/api/: __init__.py  app.py  debug.py  deps.py
backend/cantena/data/: __init__.py  building_costs.py  city_cost_index.py  csi_divisions.py  repository.py  room_costs.py  seed.py
backend/cantena/geometry/: __init__.py  centerline.py  extractor.py  measurement.py  rooms.py  scale.py  scale_verify.py  snap.py  walls.py
backend/cantena/models/: __init__.py  building.py  enums.py  estimate.py  space_program.py
backend/cantena/services/: __init__.py  hybrid_analyzer.py  llm_geometry_interpreter.py  pdf_processor.py  pipeline.py  space_assembler.py  vlm_analyzer.py
backend/tests/: test_api.py  test_centerline.py  test_cost_data.py  test_debug_geometry.py  test_debug_rooms.py  test_engine.py  test_engine_rooms.py  test_enhanced_pipeline.py  test_estimate_endpoint.py  test_extractor.py  test_formatting.py  test_hybrid_analyzer.py  test_llm_geometry_interpreter.py  test_measurement.py  test_measurement_rooms.py  test_models.py  test_models_estimate.py  test_pdf_processor.py  test_pipeline.py  test_public_api.py  test_room_costs.py  test_room_labels.py  test_rooms.py  test_scale.py  test_scale_verify.py  test_scenarios.py  test_smoke 2.py  test_snap.py  test_space_assembler.py  test_space_program.py  test_traceability.py  test_vlm_analyzer.py  test_walls.py
backend/tests/integration/: __init__.py  conftest.py  llm_grader.py  test_first_floor_centerline.py  test_first_floor_e2e_llm.py  test_first_floor_graded.py  test_first_floor_llm.py  test_first_floor_measurement.py  test_first_floor_report.py  test_first_floor_rooms.py  test_first_floor_scale.py  test_first_floor_scale_llm.py  test_first_floor_smoke.py  test_first_floor_vectors.py  test_first_floor_walls.py
(+28 files in other folders)
