[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cantena"
version = "0.1.0"
description = "Cost estimation engine for Cantena — takes a BuildingModel and produces a CostEstimate."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
packages = ["cantena"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.setuptools.packages.find]
include = ["cantena*"]
